# Corbeau

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  corbeau-config.h.in
ci/travis/: install-linux.sh
cmake/: 3rdparty.cmake
corbeau-log/: CMakeLists.txt
corbeau-log/src/: corbeau-log-category.h  corbeau-log.cpp  corbeau-log.h
qml/: main.qml  qml.qrc
qml/components/: NoteBooksView.qml  NoteEditor.qml
qml/components/NoteBooksView/: NoteBookView.qml
qml/components/NotesEditor/: CheckedToolButton.qml
qml/ui/: Content.qml  MainMenu.qml  qmldir
src/: documenthandler.cpp  documenthandler.h  main.cpp
src/data/: note.cpp  note.h  notebook.cpp  notebook.h  notebooksmodel.cpp  notebooksmodel.h  notesmodel.cpp  notesmodel.h  notetreenode.cpp  notetreenode.h
